fix long string overflow issue for messages user & admin

--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -136,6 +136,7 @@
   font-size: 1rem;
   line-height: 1.4;
   white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 .message-time {
